--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
-#ex1Slider .slider-selection {
-	background: #BABABA;
+		@for $i from 0 through 23 {
+    #trafficSlider_#{$i} .slider-selection {
+      background: #BABABA;
+    }
 }
